@@ -38,14 +38,6 @@
     </pluginRepositories>
 
     <build>
-        <testResources>
-            <testResource>
-                <directory>${project.basedir}/src/test/scala</directory>
-            </testResource>
-            <testResource>
-                <directory>${project.basedir}/src/test/resources</directory>
-            </testResource>
-        </testResources>
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -63,78 +55,59 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-resources-plugin</artifactId>
-                    <version>2.6</version>
-                    <configuration>
-                        <encoding>${project.build.sourceEncoding}</encoding>
-                        <overwrite>true</overwrite>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <version>2.4</version>
-                    <configuration>
-                        <archive>
-                            <manifest>
-                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
-                            </manifest>
-                            <manifestEntries>
-                                <Specification-Version>${project.version}</Specification-Version>
-                                <Implementation-Version>${project.version}</Implementation-Version>
-                                <Implementation-Build>${buildNumber}</Implementation-Build>
-                                <Implementation-ArtifactId>${project.artifactId}</Implementation-ArtifactId>
-                                <Build-Timestamp>${maven.build.timestamp}</Build-Timestamp>
-                            </manifestEntries>
-                        </archive>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.11</version>
+                    <version>2.19.1</version>
                     <configuration>
-                        <forkMode>once</forkMode>
-                        <useSystemClassLoader>true</useSystemClassLoader>
-                        <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
+                        <testSourceDirectory>${project.basedir}/src/test/scala</testSourceDirectory>
                     </configuration>
-                </plugin>
-                <!-- Configure Maven release plugin -->
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-release-plugin</artifactId>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>2.12.1</version>
                     <executions>
                         <execution>
-                            <id>dev</id>
+                            <id>tests</id>
+                            <phase>test</phase>
                             <goals>
-                                <goal>integration-test</goal>
-                                <goal>verify</goal>
+                                <goal>test</goal>
                             </goals>
-                            <configuration>
-                                <summaryFile>target/failsafe-reports/failsafe-summary-embedded.xml</summaryFile>
-                                <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
-                            </configuration>
                         </execution>
                     </executions>
+                </plugin>
+                <plugin>
+                    <groupId>net.alchim31.maven</groupId>
+                    <artifactId>scala-maven-plugin</artifactId>
+                    <version>3.2.2</version>
                     <configuration>
-                        <forkMode>once</forkMode>
-                        <useSystemClassLoader>true</useSystemClassLoader>
+                        <testSourceDir>${project.basedir}/src/test/scala</testSourceDir>
+                        <args>
+                            <arg>-deprecation</arg>
+                            <arg>-feature</arg>
+                            <arg>-Xmax-classfile-name</arg>
+                            <arg>240</arg>
+                        </args>
+                        <addJavacArgs>-deprecation</addJavacArgs>
+                        <source>${javac.target}</source>
+                        <target>${javac.target}</target>
                     </configuration>
+                    <executions>
+                        <execution>
+                            <id>scala-compile-first</id>
+                            <phase>process-resources</phase>
+                            <goals>
+                                <goal>add-source</goal>
+                                <goal>compile</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>scala-test-compile</id>
+                            <phase>process-test-resources</phase>
+                            <goals>
+                                <goal>testCompile</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
 
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>buildnumber-maven-plugin</artifactId>
@@ -146,28 +119,16 @@
                 <version>2.8</version>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+            <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
-                <version>3.2.2</version>
-                <configuration>
-                    <args>
-                        <arg>-deprecation</arg>
-                        <arg>-feature</arg>
-                        <arg>-Xmax-classfile-name</arg>
-                        <arg>240</arg>
-                    </args>
-                    <addJavacArgs>-deprecation</addJavacArgs>
-                    <source>${javac.target}</source>
-                    <target>${javac.target}</target>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>process-sources</phase>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
